Optimisation des methodes login/register